Rename `check_vmware_datastore` plugin, refs to it
- Rename from `check_vmware_datastore` to
  `check_vmware_datastore_space` in an effort to explicitly
  note the scope of the plugin's functionality
- Update references to the plugin to reflect this change, both
  plugin name and internal constants, variables, functions,
  types, etc.
- Update performance data metric names to reflect the plugin
  rename
- Update CHANGELOG coverage for plugin rename, performance
  data metric changes

refs GH-510

--- a/contrib/nagios/etc/nagios-plugins/config/vmware-datastores-space.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-datastores-space.cfg
@@ -9,6 +9,6 @@
 # Look at specific datastore and explicitly provide custom WARNING and
 # CRITICAL threshold values.
 define command{
-    command_name    check_vmware_datastore
-    command_line    $USER1$/check_vmware_datastore --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --ds-usage-warning '$ARG4$' --ds-usage-critical '$ARG5$' --ds-name '$ARG6$' --trust-cert  --log-level info
+    command_name    check_vmware_datastore_space
+    command_line    $USER1$/check_vmware_datastore_space --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --ds-usage-warning '$ARG4$' --ds-usage-critical '$ARG5$' --ds-name '$ARG6$' --trust-cert  --log-level info
     }
