--- a/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
+++ b/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
@@ -215,9 +215,9 @@ define service{
 define service{
     use                     vmware-vsphere-service
     host_name               vc1.exmaple.com
-    service_description     VMware Datastore - HUSVM-DC1-vol6
+    service_description     VMware Datastore Space - HUSVM-DC1-vol6
     servicegroups           vmware-checks, vmware-datastore-checks
-    check_command           check_vmware_datastore!example!vc1-read-only-service-account!$USER13$!90!95!HUSVM-DC1-vol6
+    check_command           check_vmware_datastore_space!example!vc1-read-only-service-account!$USER13$!90!95!HUSVM-DC1-vol6
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
@@ -229,9 +229,9 @@ define service{
 define service{
     use                     vmware-vsphere-service
     host_name               vc1.exmaple.com
-    service_description     VMware Datastore - HUSVM-DC1-vol7
+    service_description     VMware Datastore Space - HUSVM-DC1-vol7
     servicegroups           vmware-checks, vmware-datastore-checks
-    check_command           check_vmware_datastore!example!vc1-read-only-service-account!$USER13$!90!95!HUSVM-DC1-vol7
+    check_command           check_vmware_datastore_space!example!vc1-read-only-service-account!$USER13$!90!95!HUSVM-DC1-vol7
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
@@ -243,9 +243,9 @@ define service{
 define service{
     use                     vmware-vsphere-service
     host_name               vc1.exmaple.com
-    service_description     VMware Datastore - HUSVM-DC1-DigColl-vol8
+    service_description     VMware Datastore Space - HUSVM-DC1-DigColl-vol8
     servicegroups           vmware-checks, vmware-datastore-checks
-    check_command           check_vmware_datastore!example!vc1-read-only-service-account!$USER13$!96!98!HUSVM-DC1-DigColl-vol8
+    check_command           check_vmware_datastore_space!example!vc1-read-only-service-account!$USER13$!96!98!HUSVM-DC1-DigColl-vol8
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
@@ -257,9 +257,9 @@ define service{
 define service{
     use                     vmware-vsphere-service
     host_name               vc1.exmaple.com
-    service_description     VMware Datastore - RES-DC1-S6200-vol11
+    service_description     VMware Datastore Space - RES-DC1-S6200-vol11
     servicegroups           vmware-checks, vmware-datastore-checks
-    check_command           check_vmware_datastore!example!vc1-read-only-service-account!$USER13$!97!99!RES-DC1-S6200-vol11
+    check_command           check_vmware_datastore_space!example!vc1-read-only-service-account!$USER13$!97!99!RES-DC1-S6200-vol11
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
@@ -271,9 +271,9 @@ define service{
 define service{
     use                     vmware-vsphere-service
     host_name               vc1.exmaple.com
-    service_description     VMware Datastore - RES-DC1-S6200-vol12
+    service_description     VMware Datastore Space - RES-DC1-S6200-vol12
     servicegroups           vmware-checks, vmware-datastore-checks
-    check_command           check_vmware_datastore!example!vc1-read-only-service-account!$USER13$!90!95!RES-DC1-S6200-vol12
+    check_command           check_vmware_datastore_space!example!vc1-read-only-service-account!$USER13$!90!95!RES-DC1-S6200-vol12
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
@@ -285,9 +285,9 @@ define service{
 define service{
     use                     vmware-vsphere-service
     host_name               vc1.exmaple.com
-    service_description     VMware Datastore - RES-DC2-S6200-vol13
+    service_description     VMware Datastore Space - RES-DC2-S6200-vol13
     servicegroups           vmware-checks, vmware-datastore-checks
-    check_command           check_vmware_datastore!example!vc1-read-only-service-account!$USER13$!97!99!RES-DC2-S6200-vol13
+    check_command           check_vmware_datastore_space!example!vc1-read-only-service-account!$USER13$!97!99!RES-DC2-S6200-vol13
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
@@ -299,9 +299,9 @@ define service{
 define service{
     use                     vmware-vsphere-service
     host_name               vc1.exmaple.com
-    service_description     VMware Datastore - RES-DC2-S6200-vol14
+    service_description     VMware Datastore Space - RES-DC2-S6200-vol14
     servicegroups           vmware-checks, vmware-datastore-checks
-    check_command           check_vmware_datastore!example!vc1-read-only-service-account!$USER13$!90!95!RES-DC2-S6200-vol14
+    check_command           check_vmware_datastore_space!example!vc1-read-only-service-account!$USER13$!90!95!RES-DC2-S6200-vol14
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
