--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 /check_vmware_vhw
 /check_vmware_hs2ds2vms
 /check_vmware_datastore
+/check_vmware_datastore_space
 /check_vmware_datastore_performance
 /check_vmware_snapshots_age
 /check_vmware_snapshots_count
