Add initial draft of plugin for VM backup status
OVERVIEW

This plugin is responsible for asserting that each non-excluded or
"not ignored" VM has a last backup date within a permitted window of
time. This is accomplished by way of a specified Custom Attribute that
is expected to be routinely updated by applicable backup software when
a successful backup is completed.

This plugin accepts optional flags to:

- specify backup date time zone in case backups are performed in a
  time zone different than the default or "local" time zone that may
  be used by the monitoring system
  - defaults to `Local`
- specify backup date format in case backups are recorded using a date
  format different from the default
  - defaults to `2006-01-02 3:04:05 PM`
- specify custom attribute name used to record last backup date
  - defaults to `Last Backup`
- specify custom attribute name used to record last backup metadata
  - no default value, but if not provided, this field is omitted from
    report output

OTHER CHANGES

- Update the `GetHostsWithCA()` and `GetDatastoresWithCA()` functions
  to use a new helper function that dedupes much of the Custom
  Attribute lookup logic used by both functions
- Rename `PairingCustomAttribute` type to `CustomAttribute` to serve a
  more generalized purpose in order to be used by multiple plugins
- Move `ExceedsAge()` func, generalize so that it isn't specific to
  evaluating snapshot age, but rather the age of an "event"

KNOWN ISSUES

- Doc updates have NOT been applied yet
- LOTS of TODO/FIXME labels scattered about which need further
  evaluation
- Final form of plugin (including flag names) is not set
  - plugin needs real world testing & feedback

refs GH-506

--- a/.github/workflows/lint-and-build-code.yml
+++ b/.github/workflows/lint-and-build-code.yml
@@ -98,3 +98,4 @@ jobs:
           go build -v -mod=vendor ./cmd/check_vmware_disk_consolidation
           go build -v -mod=vendor ./cmd/check_vmware_question
           go build -v -mod=vendor ./cmd/check_vmware_alarms
+          go build -v -mod=vendor ./cmd/check_vmware_vm_backup_via_ca
