Update GHAW timeout settings
- update `CodeQL` workflow to override 360 minutes default
  timeout setting with explicit 10 minute timeout
- update `Lint and Build using Makefile` workflow to reduce
  explicit 40 minute timeout for the
  `Build codebase using Makefile quick recipe` job to 10 minutes

refs GH-581

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -20,6 +20,8 @@ jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
+    # Default: 360 minutes
+    timeout-minutes: 10
     permissions:
       actions: read
       contents: read
