Update documentation, contrib files for new plugin
- add new `vmware-backup-checks` service group
- add new service checks
  - "Amsterdam Servers" variant showcasing majority of supported
    plugin flags
  - "All" variant showcasing default options behavior
- add new command definitions file
  - showcase multiple approaches to defining commands
- refresh flag help text
  - attempt to clarify and/or simplify explanations
- add docs file for new plugin
- refresh doc.go files

refs GH-506

--- a/contrib/nagios/etc/nagios3/conf/groups/service-groups.cfg
+++ b/contrib/nagios/etc/nagios3/conf/groups/service-groups.cfg
@@ -78,3 +78,8 @@ define servicegroup{
     servicegroup_name   vmware-alarm-checks
     alias               VMware Alarm Checks
     }
+
+define servicegroup{
+    servicegroup_name   vmware-backup-checks
+    alias               VMware Backup Checks
+    }
