--- a/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
+++ b/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
@@ -563,3 +563,33 @@ define service{
     # Argument 5: Second percentile set (P,RLW,RLC,WLW,WLC,VMLW,VMLC) given as a whole number or as a floating-point number
     # Argument 6: Datastore name as seen within vSphere client
     }
+
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
+    service_description     VMware Virtual Machine Last Backup - All
+    servicegroups           vmware-checks, vmware-backup-checks
+    check_command           check_vmware_vm_backup_via_ca!example!vc1-read-only-service-account!$USER13$
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
+    service_description     VMware Virtual Machine Last Backup - Amsterdam Servers
+    servicegroups           vmware-checks, vmware-backup-checks
+    check_command           check_vmware_vm_backup_via_ca_include_pools_specify_all!example!vc1-read-only-service-account!$USER13$!"Servers"!1!2!Europe/Amsterdam!01/02/2006 15:04:05!Last Backup!Backup Status
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: Comma-separated list of Resource Pools (full names) that are to be evaluated (all others ignored)
+    # Argument 5: Warning threshold in days
+    # Argument 6: Critical threshold in days
+    # Argument 7: Time zone in tz database format
+    # Argument 8: Date/time layout string for recorded last backup date
+    # Argument 9: Custom attribute name used for last backup date
+    # Argument 10: Custom attribute name used by last backup metadata
+    }
