Enable all BUT `fieldalignment` `govet` analyzer
The `fieldanalyzer` linter does not yet offer a way (afaik) to
disable the "pointer bytes" diagnostic, so we're still relying on
the deprecated `maligned` linter for struct field size ordering.

We enable all other analzers which are not otherwise explicitly
excluded.

refs GH-611

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -42,6 +42,8 @@ linters:
 
 linters-settings:
   govet:
+    enable-all: true
+
     #
     # Disable fieldalignment settings until the Go team offers more control over
     # the types of checks provided by the fieldalignment linter or golangci-lint
